# Skibidi-News

./: .env.example  .gitignore  README.md  RELEASE_NOTE.md  compose.yaml  diary.md  mcp-inspector.json  package-lock.json  pyproject.toml  skibidi-news-wb.excalidraw
docs/: ARCHITECTURE.md  COMPONENT_GUIDE.md  DEPLOYMENT.md  FRONTEND.md  RUNBOOK.md  TESTING.md  repomix-output.md
mcp-humorizer/: Dockerfile  README.md  __init__.py  cli.py  humor.py  mcp-humorizer.md  mcp_server.py
mcp-news-aggr/: config.py  fetch_google_news.py  fetch_news.py  main.py  summarize_news.py  summarized_news.json
mcp_audio_to_video/: .env.example  Dockerfile  Dockerfile.wan  entrypoint.sh  main.py  mcp_server.py  pyproject.toml  vast_deployment.py  wan_s2v_server.py
mcp_humorizer/: .env  (+9 more)
mcp_promt_opt/: README.md  _optimizer.py  cli.py  main.py  mcp_server.py  meta_system.txt  pyproject.toml  run_optimization.py
mcp_promt_opt/opt_logs/: leaderboard_iter_0.json  round_0.jsonl  round_2.jsonl  round_3.jsonl
mcp_promt_opt/tests/: test_humor.py
mcp_text_to_video/: .dockerignore  .env.example  Dockerfile  README.md  demo-transcript-text.txt  gen.py  main.py  pub.py  pyproject.toml
mcp_text_to_video/llm/: openai.py  system-prompt.txt
mcp_text_to_video/samples/news-inputs/: demo-sample.txt
mcp_text_to_video/samples/transcript-results/: demo-transcript-text.txt
mcp_text_to_video/socials/: youtube.py  youtube_auth.py
mcp_text_to_video/tts/: gcp.py  main.py  polly.py
mcp_text_to_video/video/: tools.py
mcp_text_to_video/video_gen/: control.py  vast_deployment.py  wan_s2v_server.py
(+150 files in other folders)
